--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
 
-    "name": "Save restricted content bot by @dev_gagan",
+    "name": "Save restricted content bot by @HarishSoni",
     "description": "Telegram bot to save restricted content.",
     "logo": "",
     "keywords": [
@@ -8,9 +8,9 @@
         "Save restricted content",
         "bot"
     ],
-    "repository": "https://github.com/devgaganin/save_restricted-content-telegram-bot-repo",
+    "repository": "https://github.com/ShauryaDon/3-march-Save-Restricted-Content-Bot-Repo",
     "website": "",
-    "success_url": "https://t.me/dev_gagan",
+    "success_url": "https://t.me/HarishSoni",
     "env": {
             "API_HASH": {
             "description": "Your API HASH from my.telegram.org",
